add solution Collections task 3102